fixed overlapping queue button

--- a/WebContent/StudentCalendar.css
+++ b/WebContent/StudentCalendar.css
@@ -76,6 +76,18 @@ h1 {
 	font-size: 15px;
 }
 
+#checkQueue
+{
+	  margin-top: 100px;
+	  background-color: #FFCC00;
+	  border-radius: 3px;
+	  width: 160px;
+	  height: 30px;
+	  color: #990000;
+	  text-align: center;
+	  font-size: 16px;
+	  font-weight: bold;
+}
 #submit_button
 {
 	  background-color: #FFCC00;
